# Rust_Semestralka

./: .env  .gitignore  .~lock.Dokumentácia.odt#  Cargo.toml  Dokumentácia.odt  TODO.txt
financial_lib/: Cargo.toml  database.db
financial_lib/migrations/2025-12-21-121227-0000_create_records/: up.sql
financial_lib/migrations/2025-12-21-175742-0000_create_records/: up.sql
financial_lib/src/: db.rs  lib.rs  models.rs  schema.rs
starter/: Cargo.toml
starter/src/: main.rs
tui/: Cargo.toml  LICENSE  README.md
tui/src/: app.rs  chart_calculator.rs  event.rs  main.rs  record_list.rs  ui.rs
x86_64-pc-windows-gnu/release/: libfinancial_lib.d  tui.d
x86_64-pc-windows-gnu/release/.fingerprint/addr2line-ea10ffccd80ed8c5/: lib-addr2line  lib-addr2line.json
x86_64-pc-windows-gnu/release/.fingerprint/adler2-e2ba8e8e921d766c/: lib-adler2  lib-adler2.json
x86_64-pc-windows-gnu/release/.fingerprint/allocator-api2-1b8c8a21a472edc3/: lib-allocator_api2  lib-allocator_api2.json
x86_64-pc-windows-gnu/release/.fingerprint/backtrace-9375cda6cc49e8d0/: lib-backtrace  lib-backtrace.json
x86_64-pc-windows-gnu/release/.fingerprint/bitflags-f4af178368f67e01/: lib-bitflags  lib-bitflags.json
x86_64-pc-windows-gnu/release/.fingerprint/bytes-4a3888143e8fb35b/: lib-bytes  lib-bytes.json
x86_64-pc-windows-gnu/release/.fingerprint/cassowary-5c25ae950a77d45d/: lib-cassowary  lib-cassowary.json
x86_64-pc-windows-gnu/release/.fingerprint/castaway-08a5330798ccbbe5/: lib-castaway  lib-castaway.json
x86_64-pc-windows-gnu/release/.fingerprint/cfg-if-368e78bb09bb2677/: lib-cfg_if  (+1 more)
(+199 files in other folders)
