[package]
name = "tui"
version = "0.1.0"
description = "An example generated using the event-driven-async template"
authors = ["Enerek27 <tomhroncek@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
financial_lib = { version = "0.1.0", path = "../financial_lib" }
chrono = "0.4.42"


# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
